Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7
  CHANGES:
    * Harmonize keyboard, mouse and context menu behaviour of the Files pane
      so that it matches Local Music and Saved Playlists panes. (BR 307386)
    * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix Media Sources pane growing in size when navigating in it. (BR 246029)
    * Fix Media Sources breadcrumb items sometimes appearing as new windows. (BR 285712)
    * Fix editability and drop-ability of playlist folders.
    * Make track announcements via KDE Notifications instant. (BR 263952)
    * Fix dynamic playlist progress bar.
    * Fix Last played bias is ignored or doesn't work. (BR 311906)
    * Fix amarok dynamic play list with biases EchoNest similar artist gives no
      results. (BR 291162)
    * Fix When I try to create a dynamic playlist by Last.fm similar songs
      creation takes a lot time. (BR 301716)
    * Fix updating of Amarok database playlists then track uid changes. (BR 312128)
    * Fix hangs and inappropriate messages when trying to play a track from
      a saved playlist that has been deleted in the mean time. (BR 308371)
    * Fix existing files preventing complete transfer of tracks to collection. (BR 312001)
    * Fix crash then doing Last.fm love with uninitialized Last.fm plugin. (BR 311857)
    * Fix Last.fm streams not being correctly recreated on startup. (BR 305576)
    * Fix Ampache albums & track not being shown, a recent regression. (BR 310862)
    * Fix crash in Network Requests Viewer. (BR 311760)
    * Prevent crash when using File Browser breadcrumbs. (BR 265626)
    * Prevent crash in ServiceBase::setModel triggered by Last.fm rewrite. (BR 311723)
    * Fix incorrect display of Last.fm tags and other items. (BR 244555)
