@@ -29,25 +29,24 @@ class KJob;
 namespace KIO {
     class Job;
     class UDSEntry;
-    typedef QList< UDSEntry >  UDSEntryList;
-    typedef QList< KFileItem > KFileItemList;
+    typedef QList<UDSEntry>  UDSEntryList;
+    typedef QList<KFileItem> KFileItemList;
 }
-
-
 
 class DirectoryLoader : public QObject
 {
     Q_OBJECT
+
     public:
         DirectoryLoader();
         ~DirectoryLoader();
 
         void insertAtRow( int row ); // call before init to tell the loader the row to start inserting tracks
-        void init( const QList<KUrl>& urls ); //!< list all
-        void init( const QList<QUrl>& urls ); //!< convience
+        void init( const QList<KUrl> &urls ); //!< list all
+        void init( const QList<QUrl> &urls ); //!< convience
 
     signals:
-        void finished( const Meta::TrackList& );
+        void finished( const Meta::TrackList &tracks );
 
     private slots:
         void directoryListResults( KIO::Job *job, const KIO::UDSEntryList &list );
@@ -56,7 +55,14 @@ class DirectoryLoader : public QObject
 
     private:
         void finishUrlList();
-        static bool directorySensitiveLessThan( const KFileItem& item1, const KFileItem& item2 );
+
+        /**
+         * Probe the file @file, if it is a playlist or a track, add it to m_tracks
+         */
+        void appendFile( const KUrl &url );
+
+        static bool directorySensitiveLessThan( const KFileItem &item1, const KFileItem &item2 );
+
         /**
          * the number of directory list operations. this is used so that
          * the last directory operations knows its the last */
