@@ -4,6 +4,8 @@ Amarok ChangeLog
 
 VERSION 2.7
   CHANGES:
+    * Make dropping large directories into playlist more responsive by reading
+      track metadata asynchronously in a background thread.
     * Harmonize keyboard, mouse and context menu behaviour of the Files pane
       so that it matches Local Music and Saved Playlists panes. (BR 307386)
     * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
